Changes to second-menu and soluion metrics modal

--- a/src/app/solution-metrics-modal/solution-metrics-modal.component.html
+++ b/src/app/solution-metrics-modal/solution-metrics-modal.component.html
@@ -50,9 +50,9 @@
      </svg> tweet
   </button>
   <button mat-stroked-button class="primary" aria-label="copy result" (click)="copySolution()" cdkFocusInitial>
-    <mat-icon>content_copy</mat-icon> copy solution
+    <mat-icon>content_copy</mat-icon> copy
   </button>
   <button mat-stroked-button aria-label="understood message" [mat-dialog-close]="true">
-    see you tomorrow!
+    bye!
   </button>
 </mat-dialog-actions>
