--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -5,7 +5,7 @@
     <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
       <mat-icon>lightbulb_outline</mat-icon>
     </button> -->
-    <button *ngIf="solved && tokenIsOwnToken" mat-icon-button aria-label="Show solution metrics" (click)="showSolutionMetrics()">
+    <button *ngIf="solved && noTokenOrOwnToken" mat-icon-button aria-label="Show solution metrics" (click)="showSolutionMetrics()">
       <span class="material-symbols-outlined">
         monitoring
       </span>
