--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,6 +1,6 @@
 <div class="nav-bar">
   <mat-toolbar>
-    <span class="bar-spacer"></span>
+    <span class="bar-spacer"><img class="logo" src="assets/full_logo.png"></span>
 
     <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
       <mat-icon>lightbulb_outline</mat-icon>
