--- a/src/app/movie-display/movie-display.component.scss
+++ b/src/app/movie-display/movie-display.component.scss
@@ -3,11 +3,15 @@
     width: 210px;
     height: 300px;
     border-radius: 5px;
+    border: rgb(175, 172, 172) 1px solid;
+    background-color: rgb(218, 216, 216);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
     font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
 
 
     img {
