--- a/src/app/puzzle-page/puzzle-page.component.scss
+++ b/src/app/puzzle-page/puzzle-page.component.scss
@@ -3,9 +3,13 @@
 }
 
 .logo {
-  padding: 5px;
+  padding: 5px 0;
   max-height: 45px;
   margin-top: 7px;
+
+  @media only screen and (max-width: 600px) {
+    max-height: 35px;
+  }
 }
 
 .nav-bar {
