--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   border-radius: 16px;
   background-color:rgba(255, 255, 255, 1);
   backdrop-filter: blur(10px);
+  padding: 40px !important;
 }
 
 .mat-dialog-actions {
