Fix solution modal on smaller mobile devices

--- a/src/app/instructions-modal/instructions-modal.component.html
+++ b/src/app/instructions-modal/instructions-modal.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-  <p><strong>film in the gaps:</strong> link two films in as few steps as possible. each puzzle has a solution of six or fewer steps.</p>
+  <p><strong>film in the gaps:</strong><br>link two films in as few steps as possible. each puzzle has a solution of six or fewer steps.</p>
   <p>select a cast or crew member from the first film, then select a film from that person's filmography. repeat until you reach the last film.</p>
   <p class="example-solution">
     <img class="example-solution" src="assets/examplesolution.png">
