--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,6 +1,6 @@
 <div class="nav-bar">
   <mat-toolbar>
-    <span class="bar-spacer"><a href="https://filminthega.ps"><img class="logo" src="assets/full_logo_xmas.png"></a></span>
+    <span class="bar-spacer"><a href="https://filminthega.ps"><img class="logo" src="assets/full_logo.png"></a></span>
 
     <!-- <button mat-icon-button aria-label="Dark/light mode" (click)="darkMode = !darkMode">
       <mat-icon>lightbulb_outline</mat-icon>
