--- a/src/app/donation-modal/donation-modal.component.html
+++ b/src/app/donation-modal/donation-modal.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
   <p>hi! 👋 </p>
 
-  <p><strong>filminthega.ps</strong> has been running for almost a year <span *ngIf="numberOfPuzzlesSolved">and you've completed {{numberOfPuzzlesSolved}} puzzles</span>.</p>
+  <p><strong>filminthega.ps</strong> has been running for almost a year <span *ngIf="numberOfPuzzlesSolved">and you've completed {{numberOfPuzzlesSolved}} puzzles</span></p>
 
   <p>if everyone who regularly plays donated $5 via <a href="https://ko-fi.com/filminthegaps">our ko-fi page</a> it would cover our annual domain renewal. we will renew the domain if we gather $200 by July 14, otherwise filminthega.ps will be no more!</p>
 
