--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 .modal-backdrop {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-} 
+}
 
 .mat-dialog-container {
   border-radius: 16px;
@@ -33,9 +33,9 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 
 
 @media only screen and (max-width: 600px) {
-  .mat-dialog-actions { 
+  .mat-dialog-actions {
     justify-content: end;
-     
+
     button {
       margin-bottom: 5px;
     }
@@ -58,7 +58,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   &.mat-button-focus-overlay {
     background: rgb(192, 227, 255);
   }
-  
+
   border-color: #2a96d5 !important;
   color:#2a96d5;
 }
@@ -71,9 +71,14 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 // .mat-form-field-underline {
 //   /*change color of underline*/
 //   background-color: #D52A9F !important;
-// } 
+// }
 
 .mat-form-field-ripple {
  /*change color of underline when focused*/
  background-color: #D52A9F !important;
+}
+
+.solved-puzzle {
+  background: #D52A9F;
+  border-radius: 100%;
 }
