--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 .modal-backdrop {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-} 
+}
 
 .mat-dialog-container {
   border-radius: 16px;
@@ -51,7 +51,7 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   &.mat-button-focus-overlay {
     background: rgb(192, 227, 255);
   }
-  
+
   border-color: #2a96d5 !important;
   color:#2a96d5;
 }
@@ -64,9 +64,23 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 // .mat-form-field-underline {
 //   /*change color of underline*/
 //   background-color: #D52A9F !important;
-// } 
+// }
 
 .mat-form-field-ripple {
  /*change color of underline when focused*/
  background-color: #D52A9F !important;
 }
+
+.solved-puzzle:after {
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  transform: translate(30%,-30%) scale(0.1, 0.1);
+  border-radius: 50%;
+  background: #D52A9F;
+  mix-blend-mode:darken;
+}
+
+
+
