--- a/src/app/puzzle/puzzle.component.scss
+++ b/src/app/puzzle/puzzle.component.scss
@@ -1,5 +1,4 @@
 .game {
-    margin-top: 80px;
     margin-left: 20px;
     margin-right: 20px;
     display: flex;
@@ -14,9 +13,21 @@
         margin-left: 0px;
         margin-right: 0px;
     }
+
+    .author {
+        width: 66%;
+        margin-left: 10px;
+    }
 }
 
 .game-wrapper {
+    margin-top: 75px;
     display: inline-block;
     overflow: auto;
+}
+
+.author {
+    margin-bottom: 20px;
+    margin-left: 20px;
+    font-size: 18px;
 }
